fix small alignments in gameroom

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -31,7 +31,6 @@ canvas {
 
 #battleMap {
   grid-area: game;
-  padding-left: 15em;
   overflow: auto;
   position: relative;
   z-index: auto;
@@ -68,7 +67,6 @@ canvas {
   background: transparent;
   z-index: 5;
   left:0;
-  /* border: 2px solid; */
 }
 
 
